[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/menus/options/OptionsGame.gd" type="Script" id=1]

[node name="OptionsGame" type="VBoxContainer"]
margin_right = 394.0
margin_bottom = 521.0
custom_constants/separation = 10
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 394.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "title_game"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 40.0
margin_right = 394.0
margin_bottom = 44.0

[node name="Languages" type="HBoxContainer" parent="."]
margin_top = 54.0
margin_right = 394.0
margin_bottom = 84.0
alignment = 2

[node name="Label" type="Label" parent="Languages"]
margin_right = 195.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
size_flags_horizontal = 3
text = "label_language"
valign = 1

[node name="LanguageList" type="OptionButton" parent="Languages"]
margin_left = 199.0
margin_right = 394.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="ControlsHelper" type="HBoxContainer" parent="."]
margin_top = 94.0
margin_right = 394.0
margin_bottom = 124.0
alignment = 2

[node name="Label" type="Label" parent="ControlsHelper"]
margin_right = 366.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
size_flags_horizontal = 3
text = "label_controls_helper"
valign = 1

[node name="CheckBox" type="CheckBox" parent="ControlsHelper"]
margin_left = 370.0
margin_right = 394.0
margin_bottom = 30.0
align = 1
[connection signal="item_selected" from="Languages/LanguageList" to="." method="_on_languageList_item_selected"]
[connection signal="toggled" from="ControlsHelper/CheckBox" to="." method="_on_CheckBox_toggled"]
